Fixed positioning issues on mobile

--- a/style.css
+++ b/style.css
@@ -294,18 +294,20 @@ main {
     }
     
     nav {
-        justify-content: space-between;
+        justify-content: center;
+    }
+
+    html {
+        overflow-x: hidden;
     }
 
     .light-mode body {
         margin: 0;
-        width: 100%;
         overflow-x: hidden;
     }
 
     body {
         margin: 0;
-        width: 100%;
         overflow-x: hidden;
     }
 
@@ -341,6 +343,7 @@ main {
         padding: 15%;
         border-radius: 20px;
         align-items: center;
+        justify-content: center;
     }
 
     .main-text-container {
